# ChangeLog for x11-base/xorg-x11
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/ChangeLog,v 1.542 2006/05/13 15:36:10 joshuabaergen Exp $

  13 May 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  xorg-x11-7.1_rc2.ebuild:
  Move driver dependencies from the meta-ebuild to xorg-server as a
  PDEPEND. (Michal Suchanek, bug #132696)

*xorg-x11-7.1_rc2 (13 May 2006)

  13 May 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +xorg-x11-7.1_rc2.ebuild:
  Add a meta for 7.1RC2.  This doesn't enforce driver versions, so make sure
  you're running a masked driver if you want to try this release out.

  04 May 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.2-r7.ebuild, xorg-x11-6.9.0-r1.ebuild:
  (#132260) Block on virtual/xft slipped back in with the security bump. Get
  rid of it.

  02 May 2006; Donnie Berkholz <spyderous@gentoo.org>;
  files/digest-xorg-x11-6.8.2-r7, files/digest-xorg-x11-6.9.0-r1, Manifest:
  (#132053) Fix missing MD5 for xfsft-encodings-0.1.tar.bz2.

*xorg-x11-6.9.0-r1 (02 May 2006)
*xorg-x11-6.8.2-r7 (02 May 2006)

  02 May 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +files/CVE-2006-1526-xrender-mitri.patch, -xorg-x11-6.8.2-r4.ebuild,
  -xorg-x11-6.8.2-r6.ebuild, +xorg-x11-6.8.2-r7.ebuild,
  -xorg-x11-6.9.0.ebuild, +xorg-x11-6.9.0-r1.ebuild:
  Security bump and remove all affected versions. Please see Bug #130979 for
  details.

  28 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.2-r4.ebuild, xorg-x11-6.8.2-r6.ebuild, xorg-x11-6.9.0.ebuild:
  Remove another instance of the xft blocker (Glen Martin).

  28 Apr 2006; Donnie Berkholz <spyderous@gentoo.org>;
  xorg-x11-6.8.2-r4.ebuild, xorg-x11-6.8.2-r6.ebuild, xorg-x11-6.9.0.ebuild:
  Remove blocker on virtual/xft, got multiple email reports that this breaks
  things.

  23 Apr 2006; Stephen P. Becker <geoman@gentoo.org> xorg-x11-7.0-r1.ebuild: