@@ -1,6 +1,12 @@
 # ChangeLog for x11-base/xorg-x11
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/ChangeLog,v 1.542 2006/05/13 15:36:10 joshuabaergen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-base/xorg-x11/ChangeLog,v 1.543 2006/05/28 16:46:31 joshuabaergen Exp $
+
+*xorg-x11-7.1 (28 May 2006)
+
+  28 May 2006; Joshua Baergen <joshuabaergen@gentoo.org>
+  -xorg-x11-7.1_rc2.ebuild, +xorg-x11-7.1.ebuild:
+  Update for 7.1 release.
 
   13 May 2006; Joshua Baergen <joshuabaergen@gentoo.org>
   xorg-x11-7.1_rc2.ebuild:
